# codebase-qa

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.py  build_rag.py  chat_handler.py  chunker_factory.py  cli.py  config.py  context_builder.py  debug_tools.py  git_hash_tracker.py  hierarchical_indexer.py  llama3.1_local_code_rag.py  logger.py  metadata_extractor.py  pyproject.toml  query_intent_classifier.py  rag_manager.py  requirements.txt  setup.py  ui_components.py
Formula/: codebase-qa.rb
core/: answer_validation_handler.py  app.py  build_rag.py  chat_handler.py  chunker_factory.py  config.py  context_builder.py  cross_reference_builder.py  cross_reference_query.py  custom_llm_client.py  git_hash_tracker.py  hierarchical_indexer.py  index_builder.py  logger.py  metadata_extractor.py  model_config.py  model_provider.py  process_manager.py  prompt_router.py  query_intent_classifier.py  rag_manager.py  retrieval_logic.py  ui_components.py  utils.py
core/config/: custom_llm_client.py  featureToggle.json  feature_toggle_manager.py  model_config.py
core/context/: chunker_factory.py  cross_reference_builder.py  cross_reference_query.py  metadata_extractor.py
core/query/: chat_handler.py  retrieval_logic.py
debug_tools/: 0.2.6_testing_framework_plan.md  AGENT_BASED_AI_INSTRUCTIONS.md  FUNCTIONAL_FLOW.md  GENERAL_INSTRUCTIONS_for_AI_TOOL.md  MERMAID_CHART.md  README.md  README_for_AI_TOOL.md  USER_FLOWS.md  __init__.py  chunk_analyzer.py  codebase_qa_questionnaire.md  db_inspector.py  debug_tools.py  query_runner.py  rag_debug_queries.sql  retrieval_tester.py  test_debug_tools.py  test_download.py  test_git_commit_save.py  test_rebuild_logic.py  test_vector_db_location.py  vector_db_inspector.py
openai/: chat_service.py  test_huggingface.py  test_ollama.py
(+14 files in other folders)
